src/app/internet-plans/internet-plans.component.scss
:host {
  display: block;
}

.title {
  margin-bottom: 0.5rem;
  font-size: 400%;

  @media (width <= 40em) {
    font-size: 300%;
  }
}

.sort-by {
  display: block;
  margin-bottom: 2rem;
  font-size: 125%;
}

.sort-options {
  display: inline-block;
  align-items: center;
  justify-content: center;
  padding: 0.3em 2em 0.3em 0.5em;
  font-size: 85%;
  appearance: none;
  background-color: rgb(255 255 255);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23101010' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19 9l-7 7-7-7' /%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: center right 0.5em;
  background-size: 1em;
  border: 1px solid rgb(235 235 235);
  border-radius: 1em;
}

